static/css/style.css
/* ... */
p a {
    color:#0B5657;
    text-decoration: underline;
}

#passport-blur {
    filter: blur(10px);
}

#passport-unblur {
    filter: blur(0px);
}

a:hover {
    color:#9500a0;
    text-decoration: none;
}

.logo-background {
    padding: 1rem;
    padding-left: 0;
}

.auth-logo {
    width: 35%;
    border: 2px solid #0B5657;
    border-radius: 4px;
    margin-bottom: 1rem;
}

.warning-logo {
    width: 25%;
}

#signup_form {
    width: 11rem;
}

.footer {
    font-family: Helvetica, sans-serif;
    color: #0B5657;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png"),
        linear-gradient(to right, #ffffff, #ffffff, #0ca9a9, #0ca9a9, #0ca9a9, #0ca9a9);
        display: flex;
        justify-content: center;
    
}

footer a {
    color: #0B5657;
}

.footer-box {
    background-color: white;
    width: 260px;
    border-radius: 4px;
    padding: 0.5rem;
    border: 2px solid #0B5657;
}

.logo-text-1 {
    color: #0B5657;
    font-size: x-large;
    margin-right: 3px;
}

.logo-text-2 {
    color: #0B5657;
    font-size: x-large;
    margin-left: 1px
}

.nav-link {
    margin-top: 0.3rem;
    margin-bottom: 0.3rem;
    margin-right: 10px;
    font-size: 12px;
    text-transform: uppercase;
    letter-spacing: 2.5px;
    font-weight: 500;
    color: #000;
    background-color: #fff;
    border: none;
    border-radius: 4px;
    box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
    transition: all 0.3s ease 0s;
    cursor: pointer;
    outline: none;
}

.nav-link a {
    color: #0B5657;
}

.nav-link:hover {
    background-color: #1b5757;
    box-shadow: 0px 10px 15px rgba(185, 246, 241, 0.74);
    color: #fff;
    transform: translateY(-4px);
}

.navbar-light .navbar-nav .nav-link:hover{
    color: white;
}

.user-status {
    background-color: #1b5757;
    color: #fff;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    border-radius: 4px;
    padding-right: 1rem;
    padding-left: 1rem;
    letter-spacing: 1px;
    margin-top: 0.3rem;
    margin-bottom: 0.3rem;
    margin-right: 10px;
    font-size: 12px;
    text-transform: uppercase;
    letter-spacing: 2px;
}

.pse-logo {
    color: #f5f5f5;
    background-color: #0B5657;
    border-radius: 50%;
    padding: 0.5rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    font-size: 1.8rem;
}

.navbar-light .navbar-nav .nav-link {
    color: #0B5657;
    padding-right: 1rem;
    padding-left: 1rem;
}

#home-hero {
    margin-bottom: 1.5rem;
    padding-left: 2rem;
    padding-right: 2rem;
    text-align: center;
    color: white;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png");
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.list-heading-row {
    background: #ffffff;
    border: solid 2px #0B5657;
    border-radius: 4px;
    width: 98%;
    margin-left: 1%;
    padding: 0;
    --bs-gutter-x: 0;
}

.list-title-row {
    background-color: white;
    padding: 1rem;
    width: 50%;
    border-radius: 4px;
    border: solid 2px #0B5657;
    margin-top: 1rem;
    margin-left: 25%;
}

.list-heading {
    margin-bottom: 2.5rem;
    width: 92%;
    margin-left: 4%;
    padding: 1.5rem;
    text-align: center;
    background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png);
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.list-form {
    margin-bottom: 1rem;
}

.heading-img {
    padding: 1rem;
}

.page-link {
    color: #0B5657;
}

.page-link:hover {
    color: #9500a0;
}

.footer-container {
    margin-bottom: 1.5rem;
    margin-top: 1.5rem;
    width: 80%;
    height: 84px;
    margin-left: 10%;
    padding-top: 0.5rem;
    text-align: center;
    color: white;
    background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png);
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.list-text {
    font-size: large;
    color: black;
    padding-top: 1rem;
    text-align: center;
    background: rgba(255, 255, 255, 0.801);
}

.list-separator-rule {
    color: #0B5657;
    width: 50%;
    margin-left: 25%;
    margin-top: 1rem;
}

.pagination {
    margin-top: 1rem;
}

.pag-pages {
    text-align: center;
    margin-top: 1rem;
    margin-bottom: 1rem;
    color: #1b5757;
}

.pupil-id-text {
    display: none;
}

.link-row {
    text-align: center;
}

.record-text {
    text-align: center;
    color: #000;
}

.form-center {
    display: flex;
    justify-content: space-evenly;
    background-color: #0B5657;
    padding: 1rem;
    border-radius: 4px;
}

h1,
h2 {
    color: white;
    text-align: center;
}

.hero-text {
    font-family: lato, sans-serif;
    text-transform: uppercase;
    letter-spacing: 5px;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.hero-text h1 {
    font-size: x-large;
    background: #0B5657;
    border-radius: 4px;
    padding: 1rem;
}

#hero-strap-text {
    font-family: Helvetica, sans-serif;
    font-size: medium;
    text-transform: none;
    background: #0B5657;
    border-radius: 4px;
    padding: 1rem;
}

.main-bg {
    background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/vertical-waves.png"),
        linear-gradient(to right, #ffffff, #ffffff, #23BBBB);
}

.card-item {
    width: 95%;
    min-height: 550px;
    color: black;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png");
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    margin-top: 1rem;
    margin-left: 2.5%;
    margin-bottom: 1.5rem;
    padding-bottom: 20%;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}
/* ... */

